examples/negative/type_errors/L4/7_bool_in_int_array.ob
MODULE BoolInIntArray;

VAR MyArray: ARRAY 3 OF INTEGER;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  MyArray[0] := TRUE; ok := TRUE;
END BoolInIntArray.
